[gd_scene load_steps=6 format=2]

[ext_resource path="res://Entities/MapElements/Button.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Tilesets/RogueDungeon.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]

resource_name = "NotPressed"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 32, 192, 16, 16 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "Pressed"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 48, 192, 16, 16 ) ]
}

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 6, 6 )

[node name="Button" type="Node2D"]

script = ExtResource( 1 )
minPression = 1
linkedItems = [  ]

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 32, 192, 16, 16 )
_sections_unfolded = [ "Region" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/NotPressed = SubResource( 1 )
anims/Pressed = SubResource( 2 )
blend_times = [  ]

[node name="Area2D" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 128
collision_mask = 129
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]

[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]

[connection signal="body_shape_exited" from="Area2D" to="." method="_on_Area2D_body_shape_exited"]


